<resources>
    <string name="app_name">Registar</string>
    <string name="assets_tab_name">osnovna sredstva</string>
    <string name="employers_tab_name">zaposleni</string>
    <string name="locations_tab_name">lokacije</string>
    <string name="census_lists_tab_name">popisne liste</string>
    <string name="settings">Podešavanja</string>
    <string name="languages">Jezici</string>
    <string name="search_by_title">Pretraži po nazivu</string>
    <string name="search_by_location">Pretraži po lokaciji</string>
    <string name="textview_title_text">Naziv:</string>
    <string name="textview_description_text">Opis:</string>
    <string name="textview_location_text">Lokacija:</string>
    <string name="textview_price_text">Cijena:</string>
    <string name="textview_creation_date_text">Datum kreiranja:</string>
    <string name="textview_employee_name">Zaduženi radnik:</string>
    <string name="btn_cancel_text">otkaži</string>
    <string name="btn_save_text">sačuvaj</string>


    <string name="fab_contentDescription">Add Item</string>
    <string name="imageview_contentDescription">Picture</string>

    <string name="popup_crud_textview_edit_text">Izmijeni</string>
    <string name="popup_crud_textview_delete_text">Obriši</string>


    <string name="textview_barcode">Barkod:</string>
    <string name="toast_delete_message">Obrisano</string>
    <string name="error_text">Ovo polje je obavezno!</string>
    <string name="error_creating_file">Kreiranje fajla nije uspjelo!</string>
    <string name="permission_camera_denied">Nemate dozvolu za upotrebu kamere!</string>
    <string name="permission_denied_title">Pristup kameri odbijen</string>
    <string name="permission_permanent_denied">Pristup kameri je permanentno odbijen. Možete je omogućiti u podešavanjima aplikacije</string>
    <string name="select_image_source">Izaberi sliku</string>
    <string name="pick_from_gallery">Galerija</string>
    <string name="take_photo">Uslikaj</string>
    <string name="cancel">Otkaži</string>
    <string name="select_location">Izaberi lokaciju</string>
    <string name="select_employee">Izaberi radnika</string>
    <string name="choose_barcode_input_method">Izaberi metod unosa barkoda</string>
    <string name="enter_number">Unesi broj</string>
    <string name="scan_barcode">Skeniraj barkod</string>
    <string name="error_converting_string">Tekst ne može biti konvertovan u broj!</string>
    <string name="first_name">Ime:</string>
    <string name="last_name">Prezime:</string>
    <string name="department">Odjeljenje:</string>
    <string name="salary">Plata:</string>
    <string name="search_by_name">Pretraži po imenu</string>
    <string name="search_by_department">Pretraži po odjeljenju</string>
    <string name="full_name">Ime i prezime</string>
    <string name="edit_employee">promijeni podatke</string>
    <string name="create_employee">Kreiraj novog zaposlenog</string>
    <string name="select_department">Izaberi odjeljenje</string>
    <string name="city">Grad:</string>
    <string name="address">Ulica:</string>
    <string name="search_by_city_name">Pretraži po imenu grada</string>
    <string name="search_by_address">Pretraži po adresi</string>
    <string name="create_location">Kreiraj novu lokaciju</string>
    <string name="latitude">Geografska širina:</string>
    <string name="longitude">Geografska dužina:</string>
    <string name="department_tab_name">odjeljenja</string>
    <string name="create_department">Kreiraj novo odjeljenje</string>
    <string name="create_asset">Kreiraj novo sredstvo</string>
    <string name="assets_on_location">Sredstva na ovoj lokaciji</string>
    <string name="toast_create_message">Kreirano</string>
    <string name="asset_list_id">ID:</string>
    <string name="items_of_asset_list">Stavke popisne liste</string>
    <string name="asset_title">Naziv sredstva:</string>
    <string name="new_asset_title">Naziv novog sredstva:</string>
    <string name="select_asset">Izaberi sredstvo</string>
    <string name="old_employee">Stari zaduženi radnik:</string>
    <string name="new_employee">Novi zaduženi radnik:</string>
    <string name="old_location">Stara lokacija:</string>
    <string name="new_location">Nova lokacija:</string>
    <string name="create_list_item">Kreiraj novu stavku</string>
    <string name="list_item">stavka</string>
    <string name="asset_not_found">Sredstvo nije pronađeno!</string>
    <string name="barcode_unique_exception">Bar kod mora biti jedinstven!</string>
    <string name="choose_language">Izaberi jezik</string>
    <string name="serbian">Srpski jezik</string>
    <string name="english">Engleski jezik</string>
    <string name="department_name">Ime:</string>

</resources>