<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".AssetCreateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditToolbar">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        style="@style/ScrollbarStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon"
                style="@style/ImageviewStyle"
                android:background="@drawable/background_editable"
                android:src="@drawable/asset_icon"/>

            <!-- Title -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:labelFor="@id/title"
                    android:text="@string/textview_title_text" />

                <EditText
                    android:id="@+id/title"
                    style="@style/EditTextStyle" />
            </LinearLayout>

            <!-- Description -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:labelFor="@id/description"
                    android:text="@string/textview_description_text" />

                <EditText
                    android:id="@+id/description"
                    style="@style/EditTextStyle" />
            </LinearLayout>

            <!-- Location -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:labelFor="@id/location"
                    android:text="@string/textview_location_text" />

                <AutoCompleteTextView
                    android:id="@+id/location"
                    style="@style/EditTextStyle"
                    android:cursorVisible="false"
                    android:hint="@string/select_location"
                    android:inputType="none"/>
            </LinearLayout>

            <!-- Employee -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:labelFor="@id/employee"
                    android:text="@string/textview_employee_name" />

                <AutoCompleteTextView
                    android:id="@+id/employee"
                    style="@style/EditTextStyle"
                    android:cursorVisible="false"
                    android:hint="@string/select_employee"
                    android:inputType="none"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <!-- Creation date -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/textview_creation_date_text" />

                <TextView
                    android:id="@+id/creation_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/recycler_imageview_margins"
                    android:layout_weight="1"
                    android:background="@drawable/background_recycler_item"
                    android:padding="@dimen/recycler_imageview_padding"
                    android:text="@string/textview_creation_date_text"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <!--Price and Barcode -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:layout_width="wrap_content"
                    android:labelFor="@id/price"
                    android:layout_gravity="center"
                    android:text="@string/textview_price_text" />

                <EditText
                    android:id="@+id/price"
                    style="@style/EditTextStyle"
                    android:inputType="number" />

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/textview_barcode" />

                <EditText
                    android:id="@+id/barcode"
                    style="@style/EditTextStyle"
                    android:focusable="false"
                    android:inputType="none"/>
            </LinearLayout>

            <!-- Save and Cancel buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_container_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel"
                    style="@style/CancelSaveButton"
                    android:onClick="cancel"
                    android:text="@string/btn_cancel_text" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save"
                    style="@style/CancelSaveButton"
                    android:onClick="saveAsset"
                    android:text="@string/btn_save_text" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>