<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".AssetEditActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditToolbar">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        style="@style/ScrollbarStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon"
                style="@style/ImageviewStyle"
                android:background="@drawable/background_editable"
                android:src="@drawable/asset_icon"/>

            <!-- Title -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/textview_title_text"
                    android:labelFor="@id/title"/>
                <EditText
                    android:id="@+id/title"
                    style="@style/EditTextStyle"/>
            </LinearLayout>

            <!-- Description -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/textview_description_text"
                    android:labelFor="@id/description"/>
                <EditText
                    android:id="@+id/description"
                    style="@style/EditTextStyle"/>
            </LinearLayout>

            <!-- Location -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/textview_location_text"
                    android:labelFor="@id/location"/>
                <AutoCompleteTextView
                    android:id="@+id/location"
                    style="@style/EditTextStyle"
                    android:cursorVisible="false"
                    android:hint="@string/select_location"
                    android:inputType="none"/>
            </LinearLayout>

            <!-- Employee -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/textview_employee_name"
                    android:labelFor="@id/employee"/>
                <AutoCompleteTextView
                    android:id="@+id/employee"
                    style="@style/EditTextStyle"
                    android:cursorVisible="false"
                    android:hint="@string/select_employee"
                    android:inputType="none"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <!-- Creation date -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/textview_creation_date_text"/>
                <TextView
                    android:id="@+id/creation_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textview_creation_date_text"
                    android:background="@drawable/background_recycler_item"
                    android:layout_margin="@dimen/recycler_imageview_margins"
                    android:padding="@dimen/recycler_imageview_padding"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <!-- Barcode -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:layout_width="wrap_content"
                    android:text="@string/textview_price_text"
                    android:layout_gravity="center"
                    android:labelFor="@id/price"/>
                <EditText
                    android:id="@+id/price"
                    style="@style/EditTextStyle"
                    android:layout_gravity="center"
                    android:inputType="number"/>

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/textview_barcode"/>
                <EditText
                    android:id="@+id/barcode"
                    style="@style/EditTextStyle"
                    android:focusable="false"
                    android:inputType="none"/>
            </LinearLayout>

            <!-- Save and Cancel buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/btn_container_margin"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel"
                    style="@style/CancelSaveButton"
                    android:text="@string/btn_cancel_text"
                    android:onClick="cancel"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save"
                    style="@style/CancelSaveButton"
                    android:text="@string/btn_save_text"
                    android:onClick="saveAsset"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>