<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ListItemCreateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditToolbar">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        style="@style/ScrollbarStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Asset -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/old_asset_title"
                    android:labelFor="@id/asset"/>
                <AutoCompleteTextView
                    android:id="@+id/asset"
                    style="@style/EditTextStyle"
                    android:cursorVisible="false"
                    android:hint="@string/select_asset"
                    android:inputType="none"/>
            </LinearLayout>

            <!-- Old employee -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/old_employee"
                    android:labelFor="@id/oldEmployee"/>
                <EditText
                    android:id="@+id/oldEmployee"
                    style="@style/EditTextStyle"
                    android:enabled="false"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <!-- New employee -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/new_employee"
                    android:labelFor="@id/newEmployee"/>
                <AutoCompleteTextView
                    android:id="@+id/newEmployee"
                    style="@style/EditTextStyle"
                    android:cursorVisible="false"
                    android:hint="@string/select_employee"
                    android:inputType="none"/>
            </LinearLayout>

            <!-- Old location -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/old_location"
                    android:labelFor="@id/oldLocation"/>
                <EditText
                    android:id="@+id/oldLocation"
                    style="@style/EditTextStyle"
                    android:enabled="false"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <!-- New location -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/new_location"
                    android:labelFor="@id/newLocation"/>
                <AutoCompleteTextView
                    android:id="@+id/newLocation"
                    style="@style/EditTextStyle"
                    android:cursorVisible="false"
                    android:hint="@string/select_location"
                    android:inputType="none"/>
            </LinearLayout>

            <!-- Save and Cancel buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/btn_container_margin"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel"
                    style="@style/CancelSaveButton"
                    android:text="@string/btn_cancel_text"
                    android:onClick="cancel"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save"
                    style="@style/CancelSaveButton"
                    android:text="@string/btn_save_text"
                    android:onClick="saveListItem"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>