<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".EmployeeEditActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditToolbar">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        style="@style/ScrollbarStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon"
                style="@style/ImageviewStyle"
                android:background="@drawable/background_editable"/>

            <!-- First name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/first_name"
                    android:labelFor="@id/firstname"/>
                <EditText
                    android:id="@+id/firstname"
                    style="@style/EditTextStyle"/>
            </LinearLayout>

            <!-- Last name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/last_name"
                    android:labelFor="@id/lastname"/>
                <EditText
                    android:id="@+id/lastname"
                    style="@style/EditTextStyle"/>
            </LinearLayout>

            <!-- Department -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/department"
                    android:labelFor="@id/department"/>
                <AutoCompleteTextView
                    android:id="@+id/department"
                    style="@style/EditTextStyle"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:hint="@string/select_department"
                    android:inputType="none"/>
            </LinearLayout>

            <!-- Salary -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyleInEditMode"
                    android:text="@string/salary"
                    android:labelFor="@id/salary"/>
                <EditText
                    android:id="@+id/salary"
                    style="@style/EditTextStyle"
                    android:inputType="number"/>
            </LinearLayout>

            <!-- Save and Cancel buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/btn_container_margin"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel"
                    style="@style/CancelSaveButton"
                    android:text="@string/btn_cancel_text"
                    android:onClick="cancel"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save"
                    style="@style/CancelSaveButton"
                    android:text="@string/btn_save_text"
                    android:onClick="saveEmployee"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>