<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/asset_recycler_item_height"
    android:layout_marginBottom="@dimen/asset_recycler_item_margin_bottom"
    android:background="@drawable/background_highlighted">

    <LinearLayout
        android:id="@+id/icon_container"
        style="@style/IconContainer">

        <ImageView
            android:id="@+id/icon"
            style="@style/ImageviewStyleInRecycler"
            android:src="@drawable/asset_icon">
        </ImageView>
    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/icon_container"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/textview_title_padding"
        android:paddingBottom="@dimen/textview_title_padding"
        android:text="@string/textview_title_text"
        android:textSize="@dimen/textview_title_textSize" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/recycler_imageview_padding"
        android:layout_toEndOf="@id/icon_container"
        android:layout_below="@id/title"
        android:text="@string/textview_description_text"
        android:textSize="@dimen/textview_textSize"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/icon_container"
        android:layout_below="@id/description"
        android:text="@string/textview_location_text"
        android:textSize="@dimen/textview_textSize" />

</RelativeLayout>